--- a/LiveChat/index.html
+++ b/LiveChat/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="styles.css">
   <title>Chat Room</title>
 </head>
@@ -18,18 +22,34 @@
     <!-- buttons for chatrooms -->
     <div class="chat-rooms mb-3 text-center">
       <div class="my-2">Choose a chatroom:</div>
-      <button class="btn group-tab active" id="general">#general</button>
-      <button class="btn group-tab" id="gaming">#gaming</button>
-      <button class="btn group-tab" id="music">#music</button>
-      <button class="btn group-tab" id="ninjas">#ninjas</button>
+      <button class="btn group-tab active mx-2" id="general">#general </button>
+      <button class="btn group-tab mx-2" id="gaming">#gaming </button>
+      <button class="btn group-tab mx-2" id="music">#music </button>
+      <button class="btn group-tab mx-2" id="ninjas">#ninjas </button>
     </div>
 
-    <audio class="audio d-none" id='audio' >
-      <source src="scripts/alert.mp3" type="audio/mp3" />
+    <audio class="audio d-none" id='audio'>
+      <source src="alert.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
 
-    <button class="play"> Clik Me</button>
+    <button class="play d-none"> Clik Me</button>
+
+    <!-- Toaster message -->
+    <div class="toast d-none bg-blue" role="alert" aria-live="assertive" aria-atomic="true" data-delay="2000"
+      style="position: absolute; bottom: 1rem; right: 1rem; width: 350px;">
+      <div class="toast-header ">
+        <i class="far fa-comment-alt h5 pr-2 pt-3"></i>
+        <strong class="mr-auto"> You got a new message </strong>
+        <small>now </small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        Please check the chats in other channel..
+      </div>
+    </div>
 
     <!-- chat list / window -->
     <div class="chat-window">
